fix : dark mode card bg color contrast

--- a/src/Components/ActionBtn/ActionBtn.css
+++ b/src/Components/ActionBtn/ActionBtn.css
@@ -2,5 +2,5 @@
     position: fixed;
     right: 0;
     bottom: 7rem;
-    color: var(--white);
+    color: #000000;
 }
